# PrototypeEngine

./: CMakeLists.txt
src/: CMakeLists.txt
src/addoninstaller/: AddonInstaller.cpp  AddonInstaller.h  CAddonDataLoader.cpp  CAddonDataLoader.h  CAddonInstaller.cpp  CAddonInstaller.h  CMakeLists.txt  Helpers.cpp  Helpers.h  InstallerInterface.cpp  Main.cpp
src/bsp/: BSPFile.h  BSPIO.cpp  BSPRenderDefs.h  CMakeLists.txt
src/common/: CFile.h  CMakeLists.txt  Common.h  FilePaths.cpp  FilePaths.h  FileSystem2.h  FileUtils.cpp  FileUtils.h  IMetaLoader.h  Mathlib.h  Platform.h  StringUtils.cpp  StringUtils.h  Tokenization.cpp  Tokenization.h
src/common/lib/: CLibrary.cpp
src/engine/: CCamera.h  CEngine.cpp  CEngine.h  CMakeLists.txt  CMapManager.cpp  CMapManager.h  CVideo.cpp  CVideo.h  Engine.cpp  Engine.h
src/engine/VGUI1/: CMakeLists.txt  CVGUI1Surface.cpp  CVGUI1Surface.h  VGUI_Dialog.cpp  VGUI_Dialog.h  VGUI_FontPlat.h  VGUI_TabPanel2.cpp  VGUI_TabPanel2.h
src/engine/VGUI1/font/: CFont.cpp  CFont.h  CMakeLists.txt
src/engine/bsp/: BSPRenderIO.cpp  BSPRenderIO.h  CMakeLists.txt
src/engine/font/: CFont.cpp  CFont.h  CFontManager.cpp  CFontManager.h  CMakeLists.txt  FontRendering.cpp  FontRendering.h
src/engine/gl/: CMakeLists.txt  CShaderInstance.cpp  CTextureManager.cpp  GLMiptex.cpp  GLMiptex.h
src/engine/ui/: CMakeLists.txt
src/engine/ui/vgui1/: CCreateServerDialog.cpp  CCreateServerDialog.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  COptionsDialog.cpp  COptionsDialog.h  vgui_SchemeManager.cpp
src/entity/: CBaseEntity.h  CMakeLists.txt  EntityIO.cpp  EntityIO.h
src/filesystem/: CFileSystem.cpp
src/metaloader/: CMetaLoader.cpp  CMetaLoader.h
src/steam/: SteamWrapper.cpp
src/tier1/: CCommandLine.cpp  CCommandLine.h  CMakeLists.txt  ICommandLine.h
src/wad/: CMakeLists.txt  CWadFile.h  CWadManager.cpp  CWadManager.h  WadIO.cpp
